Модуль 5 задание 1 правка 3 от 22.04.2020

--- a/source/less/blocks/bridge.less
+++ b/source/less/blocks/bridge.less
@@ -51,7 +51,6 @@
 .bridge__picture {
   margin: 0;
   padding: 0;
-
 }
 
 .bridge__picture1 {
@@ -119,8 +118,7 @@
     align-items: center;
     width: 400px;
     margin: 0;
-    padding: 52px 80px 0px;
-    outline: 1px solid #d61e1e;
+    padding: 52px 80px 0;
   }
 
   .bridge__title {
@@ -129,7 +127,6 @@
     margin: 0;
     padding: 0;
     margin-bottom: 10px;
-    outline: 1px solid #d61e1e;
   }
 
   .bridge__number {
@@ -137,7 +134,6 @@
     margin: 0;
     padding: 0;
     margin-bottom: 22px;
-    outline: 1px solid #d61e1e;
   }
 
   .bridge__recomendation {
@@ -145,7 +141,6 @@
     width: 233px;
     margin: 0;
     padding: 0;
-    outline: 1px solid #d61e1e;
   }
 
   .bridge__recomendation br {
@@ -154,7 +149,6 @@
 
   .bridge__picture {
     width: 798px;
-    outline: 1px solid #d61e1e;
   }
 
   .bridge__picture1 {
