--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -102,12 +102,10 @@
   }
 
   .reasons__number-one {
-    margin: 0;
     padding: 0;
-    margin: 0 auto;
+    margin: 0 auto 51px;
     padding-top: 10px;
     padding-right: 5px;
-    margin-bottom: 51px;
   }
 }
 
