--- a/source/less/blocks/form-section.less
+++ b/source/less/blocks/form-section.less
@@ -1,7 +1,8 @@
 .form-section {
   width: 320px;
   padding: 0;
-  outline: 1px solid #000000;
+  border-left: 0.3px solid rgba(1, 1, 1, 0.3);
+  border-right: 0.3px solid rgba(1, 1, 1, 0.3);
 }
 
 @media (min-width: @tablet-width) {
