--- a/source/less/blocks/photos-head.less
+++ b/source/less/blocks/photos-head.less
@@ -99,7 +99,7 @@
 
   .photos-head__text {
     width: 428px;
-    margin: 0px auto 10px;
+    margin: 0 auto 10px;
   }
 }
 
@@ -111,7 +111,7 @@
   .photos-head__position {
     position: relative;
     width: 1200px;
-    height: 290px;
+    height: 300px;
     background-image: url("../img/bg-back-desktop@1x.jpg");
   }
 
@@ -126,11 +126,20 @@
   .photos-head--sedona::after {
     content: "";
     position: absolute;
-    top: 234px;
-    left: 1px;
+    top: 244px;
+    left: 0.3px;
     width: 1200px;
     height: 57px;
     background-repeat: no-repeat;
     background-image: url("../img/bg-intro-triangle-desktop.svg");
+  }
+
+  .photos-head__title {
+    margin-top: 91px;
+    margin-bottom: 22px;
+  }
+
+  .photos-head__text {
+    margin-bottom: 68px;
   }
 }
