--- a/source/less/blocks/photos-item.less
+++ b/source/less/blocks/photos-item.less
@@ -1,10 +1,10 @@
 .photos-item {
   position: relative;
   display: block;
-  margin: 0;
-  padding: 0;
   width: 320px;
   height: 414px;
+  margin: 0;
+  padding: 0;
   padding-top: 23px;
   padding-left: 20px;
   border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);
@@ -35,11 +35,11 @@
 
 .photos-item__likes {
   display: inline-block;
+  width: 23px;
+  height: 21px;
   margin: 0;
   padding: 0;
   margin-top: 6px;
-  width: 23px;
-  height: 21px;
   border: none;
   background-color: #ffffff;
   background-repeat: no-repeat;
@@ -65,60 +65,20 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 0;
-    padding: 0;
     width: 324px;
     height: 347px;
-    background-color: #ffffff;
-  }
-
-  .photos-item__positionsunset{
-    height: 400px;
-  }
-
-  .photos-item__picture {
-    width: 324px;
-    height: 267px;
-  }
-
-  .photos-item__sunset {
-    margin-left: 40px;
-  }
-
-  .photos-item__text-wrap {
-    width: 145px;
-    height: 60px;
     margin: 0;
-    margin-left: 20px;
-    margin-top: 8px;
+    padding: 0;
+    background-color: #f2f2f2;
+    border-bottom: none;
+  }
+
+  .photos-item__positionsunset {
+    height: 400px;
   }
 
   .photos-item__title {
     margin: 0;
-  }
-
-  .photos-item__positionlikes {
-    width: 88px;
-    height: 60px;
-    margin-top: 8px;
-  }
-
-  .photos-item__likes {
-    display: inline-block;
-    margin-top: 13px;
-    margin-left: 3px;
-    background-color: #f2f2f2;
-    opacity: 0.3;
-  }
-
-  .photos-item__numbers {
-    margin-left: 4px;
-  }
-
-  .photos-item__text-wrap1 {
-    width: 180px;
-    height: 37px;
-    margin-left: 20px;
   }
 
   .photos-item__sunset {
@@ -126,16 +86,100 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 0;
-    padding: 0;
     width: 648px;
     height: 480px;
+    margin: 0;
+    padding: 0;
     background-color: #f2f2f2;
   }
 
   .photos-item__picture-sunset {
     width: 647px;
     height: 400px;
+  }
+
+  .photos-item__road {
+    background-color: #eaeaea;
+  }
+
+  .photos-item__div-wrap {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 647.9px;
+    height: 80px;
+    margin: 0;
+    padding: 0 22px 5px;
+    background-color: #f2f2f2;
+  }
+
+  .photos-item__positionlikes {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 63px;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .photos-item__picture {
+    width: 324px;
+    height: 267px;
+  }
+
+  .photos-item__div-wrap1 {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 323.9px;
+    height: 80px;
+    margin: 0;
+    padding: 0 22px 5px;
+  }
+
+  .photos-item__text-wrap1 {
+    position: relative;
+    width: 180px;
+    height: 48px;
+  }
+
+  .photos-item__positionlikes1 {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 63px;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .photos-item__text-wrap {
+    position: relative;
+    width: 180px;
+    height: 45px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .photos-item__likes {
+    margin: 0;
+    padding: 0;
+    background-color: #f2f2f2;
+    opacity: 0.3;
+  }
+
+  .photos-item__numbers {
+    min-width: 24px;
+    margin: 0;
+    padding: 0;
+    margin-right: 7px;
+    margin-bottom: 2px;
+    text-align: left;
   }
 }
 
@@ -146,8 +190,50 @@
 
   .photos-item {
     position: relative;
-    width: 399px;
+    width: 399.9px;
     height: 267px;
+  }
+
+  .photos-item__positionsunset {
+    height: 320px;
+  }
+
+  .photos-item__div-wrap {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1200px;
+    height: 80px;
+    margin: 0;
+    padding: 0 22px 0;
+    box-shadow: inset 0 -80px 10px 0 rgba(0, 0, 0, 0.4);
+  }
+
+  .photos-item__text-wrap {
+    position: relative;
+    width: 145px;
+    height: 45px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .photos-item__positionlikes {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 69px;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .photos-item__likes {
+    margin: 0;
+    margin-left: 5px;
+    background-color: #3024092c;
+    background-image: url("../img/icon-like-white.svg");
   }
 
   .photos-item__sunset {
@@ -160,6 +246,23 @@
     height: 400px;
   }
 
+  .photos-item__position {
+    width: 400px;
+    height: 187px;
+  }
+
+  .photos-item__div-wrap1 {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 399.9px;
+    height: 80px;
+    margin: 0;
+    padding: 0 22px 0;
+    box-shadow: inset 0 -80px 0 0 rgba(0, 0, 0, 0.3);
+  }
+
   .photos-item__title {
     color: #ffffff;
   }
@@ -168,19 +271,8 @@
     color: #ffffff;
   }
 
-  .photos-item__text-wrap {
-    position: absolute;
-    top: 330px;
-    left: 10px;
-  }
-
-  .photos-item__positionlikes {
-    position: absolute;
-    top: 360px;
-    left: 1100px;
-  }
-
   .photos-item__numbers {
+    margin: 0;
     color: #ffffff;
   }
 
@@ -189,14 +281,21 @@
   }
 
   .photos-item__text-wrap1 {
-    position: absolute;
-    top: 200px;
-    left: 1px;
+    position: relative;
+    width: 180px;
+    height: 45px;
+    margin: 0;
+    padding: 0;
   }
 
   .photos-item__positionlikes1 {
-    position: absolute;
-    top: 230px;
-    left: 330px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 63px;
+    height: 30px;
+    margin: 0;
+    padding: 0;
   }
 }
