--- a/source/less/blocks/photos-position.less
+++ b/source/less/blocks/photos-position.less
@@ -1,7 +1,8 @@
 .photos-position {
   padding: 0;
   margin-top: 25px;
-  outline: 1px solid rgba(0, 0, 0, 0.3);
+  border-right: 0.2px solid rgba(0, 0, 0, 0.3);
+  border-left: 0.2px solid rgba(0, 0, 0, 0.3);
 }
 
 @media (min-width: @tablet-width) {
