--- a/source/less/blocks/road.less
+++ b/source/less/blocks/road.less
@@ -1,6 +1,9 @@
 .road {
-  background-color: #00000015;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  display: block;
+  width: 280px;
+  margin: 0 auto;
+  background-color: #f2f2f2;
+  border-bottom: 0.5px solid rgb(1, 1, 1, 0.2);
 }
 
 .road span {
