--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -15,9 +15,7 @@
   text-align: center;
 
   background-color: @blue;
-  border-bottom: 1px solid rgba(1, 1, 1, 0.2);
-  box-shadow: 0px 1px 0px 0px rgba(1, 1, 1, 0.2);
-  box-shadow: 0 1 0 0 rgba(255, 255, 255, 0.2)
+  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.3);
 }
 
 .site-list__item-top {
@@ -44,15 +42,11 @@
   box-shadow: none;
 }
 
-.site-list__item {
-  border: none;
-}
-
 @media (min-width: @tablet-width) {
   .site-list__item {
     width: 153px;
     background-color: #ffffff;
-    border: none;
+    box-shadow: none;
   }
 
   .site-list__item a {
