--- a/source/less/blocks/tourists.less
+++ b/source/less/blocks/tourists.less
@@ -1,5 +1,9 @@
 .tourists {
-  background-color: #00000015;
+  display: block;
+  width: 280px;
+  margin: 0 auto;
+  background-color: #f2f2f2;
+  border-bottom: 0.5px solid rgb(1, 1, 1, 0.2);
 }
 
 .tourists span {
