--- a/source/less/blocks/tourists.less
+++ b/source/less/blocks/tourists.less
@@ -13,3 +13,25 @@
 .tourists p {
   color: #333333;
 }
+
+
+@media (min-width: @tablet-width) {
+  .tourists {
+    width: 255.9px;
+    margin: 0;
+    padding: 46px 57px 45px;
+    border: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .tourists {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex: wrap;
+    justify-content: start;
+    align-items: center;
+    width: 399.9px;
+  }
+}
