--- a/source/less/blocks/bridge.less
+++ b/source/less/blocks/bridge.less
@@ -41,11 +41,17 @@
 
 .bridge__recomendation {
   display: block;
+  margin: 0;
+  padding: 0;
   margin-bottom: 40px;
   font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
   text-transform: uppercase;
+}
+
+.bridge__recomendation br {
+  display: none;
 }
 
 .bridge__picture {
@@ -75,11 +81,10 @@
 
   .bridge__wrap {
     display: block;
-    min-width: 255px;
+    width: 255.9px;
     height: 256px;
-    padding-top: 46px;
-    padding-left: 50px;
-    padding-right: 50px;
+    margin: 0;
+    padding: 50px 51px 47px;
   }
 
   .bridge__title {
