Модуль 5 задание 1 правка 4 от 22.04.2020

--- a/source/less/blocks/bridge.less
+++ b/source/less/blocks/bridge.less
@@ -1,39 +1,57 @@
 .bridge {
-  display: block;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: start;
   margin: 0;
-  padding: 0;
-  margin-top: 8px;
   padding-top: 40px;
   width: 320px;
   color: #ffffff;
-  text-align: center;
   background-color: @blue;
 }
 
 .bridge__wrap {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: start;
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 
 .bridge__title {
   display: block;
   margin: 0;
   padding: 0;
+  padding-bottom: 8px;
   font-size: @medium-font;
   font-weight: 700;
   line-height: 26px;
   text-transform: uppercase;
 }
 
-.bridge__title br {
-  display: none;
+.bridge__text1 {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+}
+
+.bridge__text2 {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
 }
 
 .bridge__number {
   display: block;
   margin: 0;
   padding: 0;
-  padding-top: 10px;
+  padding-bottom: 16px;
   font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
@@ -43,7 +61,7 @@
   display: block;
   margin: 0;
   padding: 0;
-  margin-bottom: 40px;
+  padding-bottom: 40px;
   font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
@@ -55,6 +73,8 @@
 }
 
 .bridge__picture {
+  width: 320px;
+  height: 260px;
   margin: 0;
   padding: 0;
 }
@@ -66,7 +86,6 @@
 
 @media (min-width: @tablet-width) {
   .bridge {
-    display: flex;
     margin: 0;
     padding: 0;
     width: 768px;
@@ -79,27 +98,41 @@
     height: 256px;
   }
 
+  .bridge__picture1 {
+    width: 512px;
+    height: 256px;
+  }
+
   .bridge__wrap {
-    display: block;
     width: 255.9px;
     height: 256px;
-    margin: 0;
-    padding: 50px 51px 47px;
+    padding: 45px 30px 10px;
   }
 
   .bridge__title {
     display: block;
+    width: 150px;
     margin: 0;
+    margin-bottom: 8px;
     padding: 0;
-    margin-bottom: 10px;
     font-size: @large-font;
+  }
+
+  .text1 {
+    display: block;
+    margin: 0;
+  }
+
+  .text2 {
+    display: block;
+    margin: 0;
   }
 
   .bridge__number {
     display: block;
     margin: 0;
     padding: 0;
-    margin-bottom: 22px;
+    margin-bottom: 23px;
   }
 
   .bridge__recomendation {
