--- a/source/less/blocks/realtown.less
+++ b/source/less/blocks/realtown.less
@@ -64,6 +64,12 @@
   text-transform: uppercase;
 }
 
+.realtown__picture {
+  display: block;
+  width: 320px;
+  height: 260px;
+}
+
 @media (min-width: @tablet-width) {
   .realtown__position {
     display: flex;
