--- a/source/less/blocks/tourists.less
+++ b/source/less/blocks/tourists.less
@@ -1,37 +1,3 @@
-.tourists {
-  display: block;
-  width: 280px;
-  margin: 0 auto;
-  background-color: #f2f2f2;
-  border-bottom: 0.5px solid rgb(1, 1, 1, 0.2);
-}
-
-.tourists span {
-  color: #333333;
-}
-
-.tourists p {
-  color: #333333;
-}
-
-
-@media (min-width: @tablet-width) {
-  .tourists {
-    width: 255.9px;
-    margin: 0;
-    padding: 46px 57px 45px;
-    border: none;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .tourists {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    flex: wrap;
-    justify-content: start;
-    align-items: center;
-    width: 399.9px;
-  }
+.tourists .places__wrap {
+  border: none;
 }
