--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -3,6 +3,7 @@
   .list-reset();
   margin-left: 20px;
   padding-top: 32px;
+  padding-bottom: 12px;
 }
 
 .advantages__home {
@@ -94,7 +95,7 @@
     min-height: 310px;
     margin: 0;
     padding-top: 158px;
-    padding-left: 0;
+    padding-bottom: 0.2px;
   }
 
   .advantages__home {
@@ -119,6 +120,7 @@
   .advantages__meal {
     margin: 0;
     padding: 0;
+    padding-bottom: 20px;
     width: 150px;
     height: 100px;
   }
@@ -176,6 +178,7 @@
     left: 345px;
     width: 77px;
     height: 75px;
+    padding-bottom: 10px;
     background-repeat: no-repeat;
     background-image: url("../img/icon-burger.svg");
   }
