--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,15 +1,22 @@
 .copyright {
   position: relative;
-  display: block;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: start;
   width: 320px;
+  margin: 0;
+  padding: 43px 20px 0;
+  text-align: center;
 }
 
 .copyright__text {
+  display: block;
+  width: 140px;
   margin: 0;
   padding: 0;
-  margin-left: 95px;
+  padding-right: 43px;
   font-size: @little-font;
   font-weight: 400;
   line-height: 26px;
@@ -30,22 +37,27 @@
 
 @media (min-width: @tablet-width) {
   .copyright__text {
-    margin-left: 115px;
+    margin-right: 50px;
   }
 
   .copyright__link--htmlacademy::before {
     content: "";
     position: absolute;
     top: 35px;
-    left: 217px;
+    left: 137px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .copyright__text {
+    margin-top: 45px;
+    margin-left: 30px;
+  }
+
   .copyright__link--htmlacademy::before {
     content: "";
     position: absolute;
     top: 41px;
-    left: 214px;
+    left: 252px;
   }
 }
