--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,23 +1,47 @@
 footer {
-  display: block;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: start;
   width: 320px;
-  margin: 0;
-  padding: 0;
-  padding-top: 33px;
-
   min-height: 233px;
+  margin: 0;
+  padding: 32px 0 0;
+  text-align: center;
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.footer__social {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: start;
+  margin: 0;
+  text-align: center;
+  color: #000000;
 }
 
 .footer__copyright {
-  display: block;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: start;
   margin: 0;
-  padding: 0;
-  padding-top: 44px;
+  text-align: center;
+  color: #000000;
 }
 
 .footer__title {
   display: block;
   margin: 0;
+  margin-bottom: 37px;
   padding: 0;
   font-size: @large-font;
   font-weight: 700;
@@ -40,20 +64,20 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 434px;
+    width: 512px;
     height: 120px;
     padding-top: 26px;
   }
 
   .footer__title {
     margin-top: 12px;
-    margin-left: 30px;
+    margin-left: -28px;
   }
 
   .footer__copyright {
-    width: 255px;
+    width: 255.9px;
     height: 120px;
-    padding-top: 40px;
+    padding: 40px 5px 1px;
   }
 }
 
@@ -61,6 +85,7 @@ footer {
   .footer {
     display: flex;
     width: 1200px;
+    margin: 0;
     padding: 0;
   }
 
@@ -68,20 +93,19 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 681px;
+    width: 800px;
     margin: 0;
     padding: 0;
     padding-top: 32px;
   }
 
-  .footer__title {
-    margin-left: 120px;
+  .footer__copyright {
+    width: 400px;
+    height: 120px;
   }
 
-  .footer__copyright {
-    width: 255px;
-    height: 120px;
-    margin-left: 157px;
-    padding-top: 45px;
+  .footer__title {
+    margin-left: 120px;
+    margin-top: 5px;
   }
 }
