--- a/source/less/blocks/photos-item.less
+++ b/source/less/blocks/photos-item.less
@@ -207,7 +207,8 @@
     height: 80px;
     margin: 0;
     padding: 0 22px 0;
-    box-shadow: inset 0 -80px 10px 0 rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 -80px 0 0 rgba(0, 0, 0, 0.3);
   }
 
   .photos-item__text-wrap {
