--- a/source/less/blocks/places.less
+++ b/source/less/blocks/places.less
@@ -1,13 +1,30 @@
 .places {
-  display: block;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: start;
+  width: 320px;
   margin: 0;
   padding: 0;
-  padding-top: 23px;
-  width: 320px;
-  min-height: 168px;
   text-align: center;
+  color: #000000;
+  background-color: #f2f2f2;
+}
 
-  background-color: @blue;
+.places__wrap {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: start;
+  width: 280px;
+  margin: 0;
+  padding: 26px 12px 29px;
+  text-align: center;
+  border-bottom: 0.5px solid rgba(66, 64, 64, 0.2);
 }
 
 .places__title {
@@ -29,6 +46,7 @@
   font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
+  color: #333333;
 }
 
 .places__recomendation {
@@ -41,22 +59,13 @@
   text-transform: uppercase;
 }
 
-.places__recomendation-square {
-  width: 250px;
-  margin: 18px auto 22px;
-}
-
-.places__recomendation-square br {
-  display: none;
-}
-
-.places__tourists-recomendation {
-  width: 250px;
-  margin: 18px auto 22px;
-}
-
-.places__tourists-recomendation br {
-  display: none;
+.places__shortrecomendation {
+  margin: 0;
+  padding: 0;
+  font-size: @little-font;
+  font-weight: 400;
+  line-height: 21px;
+  text-transform: uppercase;
 }
 
 @media (min-width: @tablet-width) {
@@ -66,51 +75,89 @@
     flex-direction: column;
     align-items: center;
     margin: 0;
-    padding: 47px 60px;
-    width: 255.6px;
+    padding: 46px 48px 39px;
+    width: 255.3px;
     height: 256px;
     border: none;
+  }
+
+  .places__wrap {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: start;
+    width: 159px;
+    min-width: 157px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    border-bottom: none;
   }
 
   .places__title {
     margin: 0;
     padding: 0;
+    margin-bottom: 10px;
     font-size: @large-font;
   }
 
   .places__number {
     margin: 0;
     padding: 0;
-    margin-top: 10px;
+
     margin-bottom: 21px;
   }
 
   .places__recomendation {
+    display: block;
     margin: 0;
     padding: 0;
-    width: 160px;
-  }
-
-  .places__recomendation-square br {
-    display: none;
   }
 
   .places__shortrecomendation {
-    width: 150px;
-  }
-
-  .places__tourists-recomendation br {
-    display: none;
+    width: 134px;
+    margin: 0;
+    padding: 0;
+    font-size: @little-font;
+    font-weight: 400;
+    line-height: 21px;
+    text-transform: uppercase;
   }
 }
 
 @media (min-width: @desktop-width) {
   .places {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex: wrap;
+    justify-content: start;
+    align-items: center;
     width: 399.9px;
+  }
+
+  .places__wrap {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: start;
+    width: 310px;
+    min-width: 150px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    border-bottom: none;
   }
 
   .places__title {
     width: 150px;
+    margin: 0;
+    margin-bottom: 8px;
+    padding: 0;
   }
 
   .places__number {
@@ -118,7 +165,7 @@
   }
 
   .places__recomendation {
-    width: 300px;
+    width: 310px;
     margin: 0;
     padding: 0;
   }
