--- a/source/less/blocks/question.less
+++ b/source/less/blocks/question.less
@@ -1,9 +1,29 @@
 .question {
-  display: block;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: start;
   width: 320px;
   margin: 0;
+  padding: 28px 20px 48px;
+  text-align: center;
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.question__wrap {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: start;
+  margin: 0;
+  margin-bottom: 23px;
   padding: 0;
-  padding-top: 23px;
+  text-align: center;
 }
 
 .question__text {
@@ -23,7 +43,7 @@
   display: block;
   margin: 0;
   padding: 0;
-  margin-bottom: 33px;
+  margin-bottom: 10px;
   font-size: @little-font;
   line-height: 26px;
   text-align: center;
@@ -31,11 +51,36 @@
   color: #333333;
 }
 
+.question__content-text1 {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.question__content-text2 {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+}
+
+.question__content-text3 {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+}
+
+.question__content-text4 {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
 .question__search {
   display: block;
   margin: 0;
   padding: 0;
 }
+
 
 @media (min-width: @tablet-width) {
   .question {
@@ -50,25 +95,50 @@
     margin: 0;
     padding: 0;
     padding-top: 57px;
+    padding-bottom: 15px;
+  }
+
+  .question__wrap {
+    margin: 0;
   }
 
   .question__text {
     display: block;
     margin: 0;
     padding: 0;
+    margin-bottom: 31px;
     font-size: 30px;
   }
 
   .question__content {
     display: block;
-    width: 400px;
+    width: 440px;
     margin: 0;
     padding: 0;
-    padding-top: 30px;
   }
 
-  .question__content br {
-    display: none;
+  .question__content-text1 {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+  }
+
+  .question__content-text2 {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+  }
+
+  .question__content-text3 {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+  }
+
+  .question__content-text4 {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
   }
 
   .button {
@@ -82,6 +152,11 @@
     margin: 0;
     padding: 0;
   }
+
+  .button a {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -90,9 +165,14 @@
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+    justify-content: start;
     width: 1200px;
     min-height: 331px;
     padding-bottom: 21px;
+  }
+
+  .question__wrap {
+    margin: 0;
   }
 
   .question__text {
@@ -101,12 +181,36 @@
 
   .question__content {
     display: block;
-    width: 434px;
+    width: 440px;
     margin: 0;
     padding: 0;
   }
 
-  .question__search a {
+  .question__content-text1 {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+  }
+
+  .question__content-text2 {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+  }
+
+  .question__content-text3 {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+  }
+
+  .question__content-text4 {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+  }
+
+  .question__search {
     display: block;
     margin: 0;
     padding: 0;
