Модуль 5 задание 1 правка 5 от 24.04.2020

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -50,8 +50,10 @@
 
 @media (min-width: @desktop-width) {
   .copyright__text {
-    margin-top: 45px;
-    margin-left: 30px;
+    margin: 0;
+    margin-top: 5px;
+    margin-right: 8px;
+    padding: 0;
   }
 
   .copyright__link--htmlacademy::before {
