--- a/source/less/blocks/photos-head.less
+++ b/source/less/blocks/photos-head.less
@@ -3,6 +3,7 @@
   width: 320px;
   margin: 0;
   padding: 0;
+  border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);
 }
 
 .photos-head__position {
@@ -36,6 +37,7 @@
 
 .photos-head__title {
   display: block;
+  margin-top: 20px;
   padding: 20px;
   padding-bottom: 9px;
   font-size: @medium-font;
@@ -47,6 +49,7 @@
 }
 
 .photos-head__text {
+  margin-bottom: 22px;
   font-size: @little-font;
   line-height: 26px;
   text-align: center;
@@ -58,6 +61,7 @@
   .photos-head {
     width: 768px;
     min-height: 513px;
+    border-bottom: none;
   }
 
   .photos-head__position {
@@ -69,8 +73,8 @@
 
   .photos-head__picture {
     position: absolute;
-    top: 50px;
-    left: 154px;
+    top: 94px;
+    left: 155px;
     width: 460px;
     height: 80px;
   }
