--- a/source/less/blocks/photos-item.less
+++ b/source/less/blocks/photos-item.less
@@ -10,11 +10,16 @@
   border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);
 }
 
+.photos-item__positionsunset {
+  width: 280px;
+  height: 280px;
+}
+
 .photos-item__title {
   display: block;
   margin: 0;
   padding: 0;
-  margin-top: 10px;
+  margin-top: 12px;
   font-size: @little-font;
   font-weight: 700;
   line-height: 24px;
@@ -26,7 +31,6 @@
   display: block;
   margin: 0;
   padding: 0;
-
   font-size: @little-font;
   font-weight: 400;
   line-height: 24px;
@@ -74,6 +78,7 @@
   }
 
   .photos-item__positionsunset {
+    width: 768px;
     height: 400px;
   }
 
@@ -105,22 +110,44 @@
   .photos-item__div-wrap {
     position: relative;
     display: flex;
+    flex-grow: 1;
     justify-content: space-between;
     align-items: center;
-    width: 647.9px;
     height: 80px;
     margin: 0;
-    padding: 0 22px 5px;
+    padding: 0 20px 2px;
     background-color: #f2f2f2;
+  }
+
+  .photos-item__text-wrap {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: left;
+    min-height: 45px;
+    margin: 0;
+    padding: 0;
   }
 
   .photos-item__positionlikes {
     position: relative;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 63px;
-    height: 30px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    min-width: 63px;
+    min-height: 21px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .photos-item__likes {
+    margin: 0;
+    margin-right: 9px;
+    padding: 0;
+  }
+
+  .photos-item__numbers {
     margin: 0;
     padding: 0;
   }
@@ -128,58 +155,6 @@
   .photos-item__picture {
     width: 324px;
     height: 267px;
-  }
-
-  .photos-item__div-wrap1 {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 323.9px;
-    height: 80px;
-    margin: 0;
-    padding: 0 22px 5px;
-  }
-
-  .photos-item__text-wrap1 {
-    position: relative;
-    width: 180px;
-    height: 48px;
-  }
-
-  .photos-item__positionlikes1 {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 63px;
-    height: 30px;
-    margin: 0;
-    padding: 0;
-  }
-
-  .photos-item__text-wrap {
-    position: relative;
-    width: 180px;
-    height: 45px;
-    margin: 0;
-    padding: 0;
-  }
-
-  .photos-item__likes {
-    margin: 0;
-    padding: 0;
-    background-color: #f2f2f2;
-    opacity: 0.3;
-  }
-
-  .photos-item__numbers {
-    min-width: 24px;
-    margin: 0;
-    padding: 0;
-    margin-right: 7px;
-    margin-bottom: 2px;
-    text-align: left;
   }
 }
 
@@ -195,44 +170,20 @@
   }
 
   .photos-item__positionsunset {
+    width: 1199.9px;
     height: 320px;
   }
 
   .photos-item__div-wrap {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 1200px;
-    height: 80px;
-    margin: 0;
-    padding: 0 22px 0;
     background-color: rgba(0, 0, 0, 0.05);
     box-shadow: inset 0 -80px 0 0 rgba(0, 0, 0, 0.3);
   }
 
   .photos-item__text-wrap {
-    position: relative;
-    width: 145px;
-    height: 45px;
-    margin: 0;
-    padding: 0;
-  }
-
-  .photos-item__positionlikes {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 69px;
-    height: 30px;
-    margin: 0;
-    padding: 0;
+    color: #ffffff;
   }
 
   .photos-item__likes {
-    margin: 0;
-    margin-left: 5px;
     background-color: #3024092c;
     background-image: url("../img/icon-like-white.svg");
   }
@@ -252,51 +203,14 @@
     height: 187px;
   }
 
-  .photos-item__div-wrap1 {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 399.9px;
-    height: 80px;
-    margin: 0;
-    padding: 0 22px 0;
-    box-shadow: inset 0 -80px 0 0 rgba(0, 0, 0, 0.3);
-  }
-
-  .photos-item__title {
-    color: #ffffff;
-  }
-
-  .photos-item__author {
-    color: #ffffff;
-  }
-
-  .photos-item__numbers {
-    margin: 0;
-    color: #ffffff;
-  }
-
   .photos-item__picture {
     width: 400px;
+    height: 267px;
   }
 
-  .photos-item__text-wrap1 {
-    position: relative;
-    width: 180px;
-    height: 45px;
-    margin: 0;
-    padding: 0;
-  }
-
-  .photos-item__positionlikes1 {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 63px;
-    height: 30px;
-    margin: 0;
-    padding: 0;
+  .photos-item__title,
+  .photos-item__author,
+  .photos-item__numbers {
+    color: #ffffff;
   }
 }
