--- a/source/less/blocks/photos-position.less
+++ b/source/less/blocks/photos-position.less
@@ -1,6 +1,6 @@
 .photos-position {
+  margin-top: 0;
   padding: 0;
-  margin-top: 25px;
   border-right: 0.2px solid rgba(0, 0, 0, 0.3);
   border-left: 0.2px solid rgba(0, 0, 0, 0.3);
 }
