Модуль 5 задание 1 правка 5 от 25.04.2020

--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -6,7 +6,7 @@ footer {
   align-items: center;
   justify-content: start;
   width: 320px;
-  min-height: 233px;
+  height: 233px;
   margin: 0;
   padding: 32px 0 0;
   text-align: center;
@@ -87,6 +87,7 @@ footer {
     width: 1200px;
     margin: 0;
     padding: 0;
+    height: 120px;
   }
 
   .footer__social {
