--- a/source/less/blocks/photos-item.less
+++ b/source/less/blocks/photos-item.less
@@ -145,6 +145,8 @@
     margin: 0;
     margin-right: 9px;
     padding: 0;
+    background-color: #f2f2f2;
+    opacity: 0.3;
   }
 
   .photos-item__numbers {
@@ -184,7 +186,8 @@
   }
 
   .photos-item__likes {
-    background-color: #3024092c;
+    opacity: 1.0;
+    background-color: #8a6f312c;
     background-image: url("../img/icon-like-white.svg");
   }
 
