--- a/source/less/blocks/places.less
+++ b/source/less/blocks/places.less
@@ -136,6 +136,8 @@
     justify-content: start;
     align-items: center;
     width: 399.9px;
+    padding-left: 43px;
+    padding-top: 44px;
   }
 
   .places__wrap {
@@ -156,7 +158,7 @@
   .places__title {
     width: 150px;
     margin: 0;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
     padding: 0;
   }
 
