Модуль 6 задание 1 правка 1 от 27.04.2020

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -50,7 +50,8 @@
 }
 
 @media (min-width: @desktop-width) {
-  .main-nav__logo {
-    height: 187px;
+  .main-nav__logo-image {
+    width: 188px;
+    height: 96px;
   }
 }
