--- a/source/less/blocks/realtown.less
+++ b/source/less/blocks/realtown.less
@@ -26,7 +26,7 @@
   position: absolute;
   top: -10px;
   left: 1px;
-  width: 320px;
+  width: 100%;
   height: 40px;
   background-repeat: no-repeat;
   background-image: url("../img/bg-triangle.svg");
