Модуль 6 задание 1 правка 2 от 04.05.2020

--- a/source/less/blocks/form-head.less
+++ b/source/less/blocks/form-head.less
@@ -5,16 +5,6 @@
   padding: 0;
 }
 
-.form-head__position {
-  margin: 0;
-  padding: 0;
-  width: 320px;
-  height: 158px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-image: url("../img/bg-back-mobile@1x.jpg");
-}
-
 .form-head__picture {
   position: absolute;
   top: 50px;
@@ -54,13 +44,7 @@
 @media (min-width: @tablet-width) {
   .form-head {
     width: 769px;
-  }
-
-  .form-head__position {
-    position: relative;
-    width: 768px;
-    height: 290px;
-    background-image: url("../img/bg-back-tablet@1x.jpg");
+    min-height: 513px;
   }
 
   .form-head__picture {
@@ -100,13 +84,6 @@
 @media (min-width: @desktop-width) {
   .form-head {
     width: 1200px;
-  }
-
-  .form-head__position {
-    position: relative;
-    width: 1200px;
-    height: 300px;
-    background-image: url("../img/bg-back-desktop@1x.jpg");
   }
 
   .form-head__picture {
