--- a/source/less/style.less
+++ b/source/less/style.less
@@ -34,3 +34,9 @@
 @import "blocks/button-form.less";
 @import "blocks/photos.less";
 @import "blocks/back-sedona.less";
+@import "blocks/question-photo.less";
+@import "blocks/video.less";
+@import "blocks/module1.less";
+@import "blocks/module2.less";
+@import "blocks/button-module1.less";
+@import "blocks/button-module2.less";
